cmake_minimum_required(VERSION 3.10)

# set the project name and version
project(Tutorial VERSION 1.0)

# specify the C++ standard
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED True)




#add_subdirectory(tutorial/Step2)
#add_subdirectory(tutorial/Step3)
#add_subdirectory(tutorial/Step4)
#add_subdirectory(tutorial/Step5)
#add_subdirectory(tutorial/Step6)
#add_subdirectory(tutorial/Step7)
#add_subdirectory(tutorial/Step8)
#add_subdirectory(tutorial/Step9)
#add_subdirectory(tutorial/Step10)
add_subdirectory(tutorial/Step11)


